# waveDG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.hpp.in  makefile  wavedg.hpp
docs/: Doxyfile  docs.md
examples/: .gitignore  CMakeLists.txt  INS.cpp  INS.hpp  Laplacian.cpp  advec-mpi  advec-mpi.cpp  advec.cpp  advec1d-mpi.cpp  advec1d.cpp  advec2d-mpi.cpp  advec2d.cpp  advection.cpp  cl1d-mpi.cpp  cl1d.cpp  cl2d-mpi.cpp  cl2d.cpp  convergence2d.cpp  distribute_mesh.cpp  examples.hpp  poisson.cpp  wave-mpi.cpp  wave.cpp  wave1d-mpi.cpp  wave1d.cpp  wave2d-mpi.cpp  wave2d.cpp  waveholtz-mpi.cpp  waveholtz.cpp  waveholtz1d-mpi.cpp  waveholtz1d.cpp  waveholtz2d-mpi.cpp  waveholtz2d.cpp
include/: BasisProduct.hpp  Div.hpp  Edge.hpp  EdgeFlux.hpp  Element.hpp  FaceProjector.hpp  MassMatrix.hpp  Mesh2D.hpp  Projector.hpp  QuadratureRule.hpp  Tensor.hpp  WaveEquation.hpp  eig.hpp  jacobi.hpp  lagrange_interpolation.hpp  ode.hpp
meshes/Cyl/: coordinates.txt  elements.txt  info.txt
meshes/L/: coordinates.txt  elements.txt  gen_mesh.py  info.txt
meshes/OneQuad/: coordinates.txt
meshes/Square/: coordinates.txt  elements.txt  gen_mesh.py  info.txt
meshes/skew/: coordinates.txt  elements.txt  gen_mesh.py  info.txt
source/: CGMask.cpp  CovariantNormalProlongator.cpp  DG2CG.cpp  Div.cpp  DivF.cpp  Edge.cpp  EdgeFlux.cpp  EdgeFluxF.cpp  Element.cpp  FEMVector.cpp  FaceProjector.cpp  FaceProlongator.cpp  Laplacian.cpp  MassMatrix.cpp  Mesh1D.cpp  Mesh2D.cpp  Nabla.cpp  PeriodicBC.cpp  QuadratureRule.cpp  Serializer.cpp  StiffnessMatrix.cpp  WaveEquation.cpp  WaveHoltz.cpp  ZeroBoundary.cpp  eig.cpp  jacobi.cpp  lagrange_interpolation.cpp  linalg.cpp  pcg.cpp  wdg_error.cpp
wavedg/: Advection.hpp  BasisProduct.hpp  CGMask.hpp  CovariantNormalProlongator.hpp  DG2CG.hpp  Div.hpp  DivF.hpp  Edge.hpp  EdgeFlux.hpp  EdgeFluxF.hpp  Element.hpp  FEMVector.hpp  FaceProjector.hpp  FaceProlongator.hpp  Laplacian.hpp  LinearFunctional.hpp  MPI_Base.hpp  MassMatrix.hpp  Mesh1D.hpp  Mesh2D.hpp  Nabla.hpp  Node.hpp  Operator.hpp  PeriodicBC.hpp  Projector.hpp  QuadratureRule.hpp  Serializer.hpp  StiffnessMatrix.hpp  Tensor.hpp  WaveEquation.hpp  WaveHoltz.hpp  ZeroBoundary.hpp  eig.hpp  jacobi.hpp  lagrange_interpolation.hpp  linalg.hpp  ode.hpp  pcg.hpp  wdg_error.hpp
